--- a/.github/workflows/yolo.yml
+++ b/.github/workflows/yolo.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
            truncate -s 10G gentoo_root.img
            ls -alh
-           zip -s 2G -r gentoo_root.zip gentoo_root.img
+           zip -0 -s 2G -r gentoo_root.zip gentoo_root.img
            ls -alh
 
            
