--- a/.github/workflows/yolo.yml
+++ b/.github/workflows/yolo.yml
@@ -1,7 +1,10 @@
 name: Packer build qemu
 
 on:
-  push
+  push:
+    tags:
+      - '*'
+
 
 jobs:
   build:
@@ -12,8 +15,18 @@ jobs:
         run: |
            truncate -s 10G gentoo_root.img
            ls -alh
-           zip -0 -s 2G -r gentoo_root.zip gentoo_root.img
+           zip -0 -s 2G -r zipped_gentoo_root.zip gentoo_root.img
            ls -alh
+
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: zipped_.*.z*
+          file_glob: true
+          tag: ${{ github.ref }}
+          overwrite: true
+          body: "This is my release text"
 
            
 
