--- a/.github/workflows/yolo.yml
+++ b/.github/workflows/yolo.yml
@@ -17,14 +17,14 @@ jobs:
         run: |
            truncate -s 10G gentoo_root.img
            ls -alh
-           zip -0 -s 2G -r zipped_gentoo_root.zip gentoo_root.img
+           zip -0 -s 2G -r zip_part_gentoo_root.zip gentoo_root.img
            ls -alh
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: zipped_.*.z*
+          file: zip_part_**
           file_glob: true
           tag: ${{ github.ref }}
           overwrite: true
