--- a/.github/workflows/yolo.yml
+++ b/.github/workflows/yolo.yml
@@ -20,15 +20,24 @@ jobs:
            zip -0 -s 2G -r zip_part_gentoo_root.zip gentoo_root.img
            ls -alh
 
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+      - name: upload
+        uses: xresloader/upload-to-github-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: zip_part_**
-          file_glob: true
-          tag: ${{ github.ref }}
-          overwrite: true
-          body: "This is my release text"
+          file: "*.z*"
+          tags: true
+
+
+      # - name: Upload binaries to release
+      #   uses: svenstaro/upload-release-action@v2
+      #   with:
+      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #     file: zip_part_**
+      #     file_glob: true
+      #     tag: ${{ github.ref }}
+      #     overwrite: true
+      #     body: "This is my release text"
 
            
 
