--- a/.github/workflows/yolo.yml
+++ b/.github/workflows/yolo.yml
@@ -17,7 +17,8 @@ jobs:
         run: |
            truncate -s 10G gentoo_root.img
            ls -alh
-           zip -0 -s 1024m -r zip_part_gentoo_root.zip gentoo_root.img
+           tar --use-compress-program="gzip -0" -cvf gentoo_root.tar.gz gentoo_root.img
+           split -b 1024mbb gentoo_root.tar.gz gentoo_root.tar.gz.part_
            ls -alh
 
       - name: upload
@@ -25,7 +26,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          file: "*.z*"
+          file: "*.tar.gz.part_*"
           tags: true
 
 
